protocolmodel/mcrl2/testing/errors/error_1004.mcf
% E1004 - Unexpected message type
[true* . ERROR_MSG(E1004)] false